--- a/finalproject/src/main/webapp/WB03S7HG3/template/css/style.css
+++ b/finalproject/src/main/webapp/WB03S7HG3/template/css/style.css
@@ -351,7 +351,7 @@ Version: 1.0
      width: 100%;
 }
  .osahan-nav-top a.navbar-brand img {
-     height: 26px;
+     height: 50px;
 }
  .osahan-nav-mid {
      padding-top: 0px;
@@ -1697,7 +1697,7 @@ Version: 1.0
      right: -5px;
 }
  .recommended a img.img-fluid {
-     height: 190px;
+	 height: 100%    
      object-fit: cover;
      margin: auto;
      width: 100%;
@@ -1996,7 +1996,7 @@ Version: 1.0
      align-items: center;
 }
  .copyright .logo img {
-     height: 27px;
+     height: 40px;
 }
  .copyright .social {
      margin-left: auto;
